# aoc-py

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
.github/workflows/: test.yml
day01/: main.py
day02/: main.py
day03/: main.py
day04/: input.txt  main.py
day05/: gen.py  main.py  stress.sh
day06/: main.py
day07/: gen.py  main.py
day08/: main.py
day09/: main.py
day16/: gen.py  main.py
src/aoclib/: grid2d.py  int_range.py  util.py
src/aoclib/flow/: dinic.py
src/aoclib/geometry/: line.py  point.py  rational.py
src/aoclib/graph/: bridge.py  graph.py  scc.py
src/aoclib/structures/: dsu.py
y2023/day00/: main.py
y2023/day01/: main.py
y2023/day02/: main.py
y2023/day03/: main.py
y2023/day04/: main.py
y2023/day05/: gen.py  inp2.txt  main.py  s2.txt
y2023/day06/: main.py
y2023/day07/: main.py
y2023/day08/: main.py
y2023/day09/: main.py
y2023/day10/: main.py
y2023/day11/: main.py
y2023/day12/: main.py
y2023/day13/: main.py
y2023/day14/: main.py
y2023/day15/: main.py
y2023/day16/: gen.py  main.py  stress.sh
y2023/day17/: main.py
y2023/day18/: main.py
y2023/day19/: main.py
y2023/day20/: main.py
y2023/day21/: main.py
y2023/day24/: main.py
y2023/day25/: main.cpp  main.py
